import {Entity, hasMany, hasOne, model, property} from '@loopback/repository';
import {ProjectMember} from './project-member.model';
import {Project} from './project.model';
import {UserCredentials} from './user-credentials.model';

@model({
  settings: {
    strict: false,
  },
  indexes: {
    uniqueEmail: {
      keys: {email: 1},
      options: {unique: true},
    },
    uniqueUsername: {
      keys: {username: 1},
      options: {unique: true},
    },
  },
})
export class User extends Entity {
  @property({
    type: 'string',
    id: true,
    generated: true,
  })
  id: string;

  @property({
    type: 'string',
    required: true,
  })
  username: string;

  @property({
    type: 'string',
    required: true,
  })
  email: string;

  @property({
    type: 'string',
    id: true,
  })
  role: string;

  @property({
    type: 'date',
    default: () => new Date(),
  })
  createdAt?: string;

  @property({
    type: 'date',
    default: () => new Date(),
  })
  updatedAt?: string;

  @hasMany(() => Project, {through: {model: () => ProjectMember}})
  projects: Project[];

  @hasOne(() => UserCredentials)
  userCredentials: UserCredentials;
  // Define well-known properties here

  // Indexer property to allow additional data
  // eslint-disable-next-line @typescript-eslint/no-explicit-any
  [prop: string]: any;

  constructor(data?: Partial<User>) {
    super(data);
  }
}

export interface UserRelations {
  // describe navigational properties here
}

export type UserWithRelations = User & UserRelations;
